# truncate

./: COPYING  Makefile.am  README  configure.ac
man/: Makefile.am  truncate.1
src/: Makefile.am  expand_number.c  truncate.c
